# amiri

./: .gitignore  .gitmodules  .travis.yml  AUTHORS  AUTHORS.txt  Amiri.fontspec  CNAME  COPYING  COPYING.ar  Makefile  NEWS  NEWS-Arabic.md  NEWS.ar  NEWS.md  OFL.txt  README  README-Arabic.md  README.ar  README.md  README.txt  TODO  TODO.md  build.py  fatiha-colored.html  fatiha-colored2.html  fatiha.html  fix-gf.py  font-features-test.html  index.html  makeclr.py  pyproject.toml  requirements.in  requirements.txt  style.css
.github/: FUNDING.yml
documentation/: Documentation-Arabic.css  Documentation-Arabic.html  Documentation-Arabic.md  Documentation-Arabic.tex  NEWS-Arabic.txt  NEWS.txt  README-Arabic.txt  README.txt  documentation-arabic.css  documentation-arabic.tex
font/: AmiriText-Regular.sfd  BulaqNaskh.sfd  amiri-regular.sfd
scripts/: build.py  calt_helper.py  fix-gf.py  font_preview.py  mkquran.py  no-glyphnames.py
sources/: .gitignore  Amiri-Bold.glyphs  Amiri-Bold.sfd  Amiri-Regular.glyphs  Amiri-Regular.sfd  Amiri.fea  AmiriLatin-Bold.sfd  AmiriLatin-BoldSlanted.sfd  AmiriLatin-Regular.sfd  AmiriLatin-Slanted.sfd  Makefile  amiri-bold.fea  amiri-regular.fea  amiri-regular.sfd  amiri-slanted.fea  amiri.fea  basic.fea  calt.fea  ccmp.fea  classes.fea  composition.fea  contextuals.fea  digits.fea  enclosing.fea  gsub.fea  italic.fea  italic_classes.fea  italic_kerning.fea  italic_ltra.fea  italic_proportional.fea  italic_rtla.fea  kashida.fea  kern.fea  kerning.fea  klasses.fea  lang.fea  lang_arabic.fea  lang_latin.fea  latin.fea  latin_gsub.fea  (+10 more)
(+48357 files in other folders)
